tests/NormalTests/paczka2/big_fuzzy/74885119.err
Error in line 15: 8IdqF9Dc1b S40 2,5
Error in line 8: HM13 A966 84,3
Error in line 22: jAd2MC02 A192 58,9
Error in line 24: jAd2MC02 A198 73,7
Error in line 32: A966 A192 62,4
Error in line 48: jAd2MC02 A198 20,4
Error in line 58: rd1 A192 22,6
Error in line 67: HM13 S40 -5,8
Error in line 63: goWqsSDh A966 19,7
Error in line 60: A966 S40 72,0
Error in line 78: A966 A192 49,4
Error in line 80: HM13 A966 59,2
Error in line 81: A966 A198 47,5
Error in line 85: goWqsSDh A192 14,8
Error in line 93: goWqsSDh A198 22,2
Error in line 105: jAd2MC02 A198 40,6
Error in line 109: goWqsSDh S40 62,9
Error in line 116: mWwLjY A198 53,04
Error in line 119: jAd2MC02 A192 26,6
Error in line 134: mWwLjY A966 24,5
Error in line 136: mWwLjY S40 48,6
Error in line 137: goWqsSDh A198 29,3
Error in line 140: jAd2MC02 S40 66,5
Error in line 147: jAd2MC02 A198 94,5
Error in line 154: mWwLjY S40 33,9
Error in line 130: rd1 A198 26,6
Error in line 156: jAd2MC02 S40 77,5
Error in line 170: HM13 A198 70,5
Error in line 180: goWqsSDh A192 231,6
Error in line 176: mWwLjY A198 99,0
Error in line 195: 8IdqF9Dc1b S40 61,2
Error in line 212: rd1 A198 -4,6
Error in line 204: mWwLjY A192 51,0
Error in line 220: A966 A192 24,2
Error in line 224: A966 S|0 22|,|
Error in line 222: A966 S40 49,2
Error in line 226: jAd2MC02 S40 51,1
Error in line 219: 8IdqF9Dc1b A192 39,3
Error in line 239: jAd2MC02 A192 -2,2
Error in line 243: ?#198
Error in line 245: goWqsSDh S40 75,33
Error in line 231: HM13 A198 39,0
